# graph-mapping

./: .gitignore  CMakeLists.txt
src/: App.cpp  Benchmark.cpp  Benchmark.h  CommTime.cpp  CommTime.h  Demo.cpp  Demo.h  GraphGenerators.cpp  GraphGenerators.h  GreedyMapping.cpp  GreedyMapping.h  HopByteMapping.cpp  HopByteMapping.h  IOUtil.cpp  IOUtil.h  InitialMapping.cpp  InitialMapping.h  Log.h  RandomMapping.cpp  RandomMapping.h  StaticMappingAlgorithm.h  Util.h  WeightedFirstFitMapping.cpp  WeightedFirstFitMapping.h  WeightedGreedyMapping.cpp  WeightedGreedyMapping.h  main.cpp
src/test/: CommTimeTest.cpp  CommTimeTest.h  GreedyMappingTest.cpp  GreedyMappingTest.h  InitialMappingTest.h  WeightedGreedyMappingTest.cpp  WeightedGreedyMappingTest.h  test.cpp
